--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "main": "./sources/js/src/index.ts",
   "types": "./sources/js/src/@types/index.d.ts",
   "license": "GPL-2.0-or-later",
+  "engines": {
+    "node": "16"
+  },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@jest/globals": "^29.4.3",
@@ -13,7 +16,9 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
     "@wordpress/env": "^5.9.0",
+    "@wordpress/eslint-plugin": "^14.8.0",
     "@wordpress/scripts": "^25.1.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "jest": "^29.4.3",
     "prettier": "^2.8.1",
     "ts-jest": "^29.0.5",
@@ -36,6 +41,8 @@
     "build": "wp-scripts build --webpack-src-dir=./sources/js/src",
     "build:dev": "wp-scripts build --mode=development --webpack-src-dir=./sources/js/src",
     "cs:fix": "wp-scripts format ./sources/js",
+    "lint:js": "wp-scripts lint-js",
+    "lint:js:fix": "wp-scripts lint-js --fix",
     "test": "jest"
   }
 }
