--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@jest/globals": "^29.4.3",
+    "@testing-library/react": "^14.0.0",
     "@total-typescript/shoehorn": "^0.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
     "@wordpress/env": "^5.9.0",
     "@wordpress/scripts": "^25.1.0",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.1",
     "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
@@ -29,6 +31,7 @@
     "@emotion/styled": "^11.10.5",
     "@wordpress/api-fetch": "^6.21.0",
     "@wordpress/components": "^23.1.0",
+    "@wordpress/core-data": "^6.12.0",
     "@wordpress/element": "^5.1.0",
     "@wordpress/i18n": "^4.24.0",
     "react": "^18.2.0",
