--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
     "@wordpress/env": "^5.9.0",
+    "@wordpress/eslint-plugin": "^14.8.0",
     "@wordpress/scripts": "^25.1.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.1",
@@ -42,6 +44,8 @@
     "build": "wp-scripts build --webpack-src-dir=./sources/js/src",
     "build:dev": "wp-scripts build --mode=development --webpack-src-dir=./sources/js/src",
     "cs:fix": "wp-scripts format ./sources/js",
+    "lint:js": "wp-scripts lint-js",
+    "lint:js:fix": "wp-scripts lint-js --fix",
     "test": "jest"
   }
 }
