Introduce Immutable JS PT2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
     "alwaysStrict": true,
     "exactOptionalPropertyTypes": true,
     "noFallthroughCasesInSwitch": true,
@@ -19,6 +20,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "baseUrl": ".",
+    "moduleResolution": "NodeNext",
     "paths": {
       "@entities-search-types": [
         "./sources/js/src/@types"
