--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@wordpress/core-data": "^6.12.0",
     "@wordpress/element": "^5.1.0",
     "@wordpress/i18n": "^4.24.0",
+    "immutable": "^4.3.0",
     "react": "^18.2.0",
     "react-select": "^5.7.0"
   },
