--- a/.github/workflow/js-qa.yml
+++ b/.github/workflow/js-qa.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - feature/post-types-select
     paths:
       - '**/workflows/*js*'
       - '**.js'
