Clean up workflow

--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -1,4 +1,5 @@
 name: JS Quality Assurance
+
 on:
   pull_request:
   push:
@@ -12,17 +13,23 @@ on:
       - '**.ts'
       - '**.tsx'
       - '**.json'
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    if: "!contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft"
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
           cache: 'yarn'
           node-version: '16'
-        run: yarn install && yarn lint:js
+
+      - name: Install
+        run: yarn install
+
+      - name: Linting JavaScript
+        run: yarn lint:js
