--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
     "@wordpress/env": "^5.9.0",
     "@wordpress/eslint-plugin": "^14.8.0",
-    "@wordpress/scripts": "^25.1.0",
+    "@wordpress/scripts": "^26.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.5.0",
@@ -42,7 +42,7 @@
   "scripts": {
     "wp-env": "wp-env",
     "build": "wp-scripts build --webpack-src-dir=./sources/js/src",
-    "build:dev": "wp-scripts build --mode=development --webpack-src-dir=./sources/js/src",
+    "build:dev": "wp-scripts start --webpack--devtool=inline-source-map --webpack-src-dir=./sources/js/src",
     "cs:fix": "wp-scripts format ./sources/js",
     "lint:js": "wp-scripts lint-js",
     "lint:js:fix": "wp-scripts lint-js --fix",
