--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@jest/globals": "^29.4.3",
+    "@testing-library/dom": "^9.3.1",
     "@testing-library/react": "^14.0.0",
     "@total-typescript/shoehorn": "^0.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
