--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "yarn": "^1.22.19"
   },
   "dependencies": {
-    "@emotion/styled": "^11.10.5",
-    "@wordpress/api-fetch": "^6.21.0",
-    "@wordpress/components": "^23.1.0",
-    "@wordpress/core-data": "^6.12.0",
-    "@wordpress/element": "^5.1.0",
-    "@wordpress/i18n": "^4.24.0",
-    "immutable": "^4.3.0",
-    "react": "^18.2.0",
-    "react-select": "^5.7.0"
+    "@emotion/styled": "~11.10.5",
+    "@wordpress/api-fetch": "~6.21.0",
+    "@wordpress/components": "~23.1.0",
+    "@wordpress/core-data": "~6.12.0",
+    "@wordpress/element": "~5.1.0",
+    "@wordpress/i18n": "~4.24.0",
+    "immutable": "~4.3.0",
+    "react": "~18.2.0",
+    "react-select": "~5.7.0"
   },
   "scripts": {
     "wp-env": "wp-env",
