--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -31,5 +31,8 @@ jobs:
       - name: Install
         run: yarn install
 
+      - name: Coding Style
+        run: yarn cs
+
       - name: Linting JavaScript
         run: yarn lint:js
