Add Post Select tests and make it work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
 	"phpCodeSniffer.autoExecutable": true,
 	"[php]": {
 		"editor.defaultFormatter": "obliviousharmony.vscode-php-codesniffer"
-	}
+	},
+	"prettier.configPath": ".prettierrc.js"
 }
