--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jest/globals": "^29.4.3",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@total-typescript/shoehorn": "^0.1.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
