--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '--skip ci') && !github.event.pull_request.draft"
+    if: "!github.event.pull_request.draft"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -36,3 +36,6 @@ jobs:
 
       - name: Linting JavaScript
         run: yarn lint:js
+
+      - name: Unit Tests
+        run: yarn test
