Introduce Posts & Post Types Selects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
     "alwaysStrict": true,
     "exactOptionalPropertyTypes": true,
     "noFallthroughCasesInSwitch": true,
@@ -19,16 +20,13 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "baseUrl": ".",
+    "moduleResolution": "NodeNext",
     "paths": {
-      "@entities-search-types": [
-        "./sources/js/src/@types"
-      ],
-      "@entities-search": [
-        "./sources/js/src"
-      ]
-    },
+      "@types": ["./@types/index.d.ts"],
+    }
   },
   "include": [
+    "@types",
     "sources/js/**/*",
     "tests/js/**/*"
   ],
