--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,36 +1,31 @@
 {
-  "compilerOptions": {
-    "target": "ES2022",
-    "alwaysStrict": true,
-    "exactOptionalPropertyTypes": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "strict": true,
-    "useUnknownInCatchVariables": true,
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "jsx": "react",
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "baseUrl": ".",
-    "moduleResolution": "NodeNext",
-    "paths": {
-      "@types": ["./@types/index.d.ts"],
-    }
-  },
-  "include": [
-    "@types",
-    "sources/js/**/*",
-    "tests/js/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+	"compilerOptions": {
+		"target": "ES2022",
+		"alwaysStrict": true,
+		"exactOptionalPropertyTypes": true,
+		"noFallthroughCasesInSwitch": true,
+		"noImplicitAny": true,
+		"noImplicitOverride": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noUncheckedIndexedAccess": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"strict": true,
+		"useUnknownInCatchVariables": true,
+		"resolveJsonModule": true,
+		"sourceMap": true,
+		"jsx": "react",
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"baseUrl": ".",
+		"module": "ESNext",
+		"moduleResolution": "Node10",
+		"paths": {
+			"@types": ["./@types/index.d.ts"]
+		}
+	},
+	"include": ["@types", "sources/js/**/*", "tests/js/**/*"],
+	"exclude": ["node_modules"]
 }
