--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   "dependencies": {
     "@wordpress/api-fetch": "~6.21.0",
     "@wordpress/components": "~23.1.0",
+    "@wordpress/compose": "^6.23.0",
     "@wordpress/core-data": "~6.12.0",
-    "@wordpress/element": "~5.1.0",
+    "@wordpress/element": "^5.23.0",
     "@wordpress/i18n": "~4.24.0",
     "classnames": "^2.3.2",
     "immutable": "~4.3.0",
