Set vendor directory as read-only
Signed-off-by: guido <dev@guidoscialfa.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
 	"phpCodeSniffer.autoExecutable": true,
 	"prettier.configPath": ".prettierrc.js",
 	"files.readonlyInclude": {
-		"**/node_modules/**/src/**": true
+		"**/node_modules/**/src/**": true,
+		"**/vendor/**/roots/**": true
 	},
 	"favorites.resources": [
 		{
