--- a/.editorconfig
+++ b/.editorconfig
@@ -121,6 +121,9 @@ ij_xml_space_inside_empty_tag = false
 ij_xml_text_wrap = normal
 
 [{*.ats,*.cts,*.mts,*.ts,*.tsx}]
+indent_size = 4
+indent_style = tab
+tab_width = 4
 ij_continuation_indent_size = 2
 ij_typescript_align_imports = false
 ij_typescript_align_multiline_array_initializer_expression = false
@@ -303,6 +306,9 @@ ij_shell_switch_cases_indented = false
 ij_shell_use_unix_line_separator = true
 
 [{*.cjs,*.js}]
+indent_size = 4
+indent_style = tab
+tab_width = 4
 ij_continuation_indent_size = 2
 ij_javascript_align_imports = false
 ij_javascript_align_multiline_array_initializer_expression = false
