--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"yarn": "^1.22.19"
 	},
 	"dependencies": {
+		"@types/lodash": "^4",
 		"@wordpress/api-fetch": "~6.21.0",
 		"@wordpress/components": "~23.1.0",
 		"@wordpress/compose": "^6.23.0",
@@ -38,6 +39,7 @@
 		"@wordpress/hooks": "^3.49.0",
 		"@wordpress/i18n": "~4.24.0",
 		"classnames": "^2.3.2",
+		"lodash": "^4.17.21",
 		"react": "~18.2.0"
 	},
 	"scripts": {
