--- a/package.json
+++ b/package.json
@@ -15,15 +15,12 @@
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.5.1",
 		"@total-typescript/shoehorn": "^0.1.0",
-		"@trivago/prettier-plugin-sort-imports": "^4.0.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
 		"@wordpress/env": "^5.9.0",
-		"@wordpress/eslint-plugin": "^14.8.0",
 		"@wordpress/scripts": "^26.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
-		"prettier": "^2.8.1",
 		"ts-jest": "^29.0.5",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
@@ -46,10 +43,9 @@
 		"wp-env": "wp-env",
 		"build": "wp-scripts build --webpack-src-dir=./sources/client/src",
 		"build:dev": "wp-scripts start --webpack--devtool=inline-source-map --webpack-src-dir=./sources/client/src",
-		"cs": "yarn prettier --check ./sources/client",
 		"cs:fix": "wp-scripts format ./sources/client",
-		"lint:js": "wp-scripts lint-js",
-		"lint:js:fix": "wp-scripts lint-js --fix",
+		"lint:js": "wp-scripts lint-js ./sources/client",
+		"lint:js:fix": "wp-scripts lint-js --fix ./sources/client",
 		"test": "jest",
 		"test:update-snapshots": "yarn test -u"
 	}
