--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,17 +1,18 @@
 title: Wp Entities Search
 description: >-
   A WordPress package to search Entities including Rest API Endpoints and React Components
-baseurl: /wp-entities-search/docs
+url: 'https://widoz.github.io/wp-entities-search'
+baseurl: '/wp-entities-search'
 
-# Aux links for the upper right navigation
-aux_links:
-  "Wp Entities Search":
-    - https://github.com/widoz/wp-entities-search
-
-gh_edit_branch: documentation/github-pages-jekyll-config
-gh_edit_source: docs
+toc:
+  enabled: true
+  h_min: 1
+  h_max: 3
 
 remote_theme: sighingnow/jekyll-gitbook
 
 plugins:
   - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-readme-index
+  - jemoji
