--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,12 @@ description: >-
 url: 'https://widoz.github.io/wp-entities-search'
 baseurl: '/wp-entities-search'
 
+remote_theme: pages-themes/minimal@v0.2.0
+
 toc:
   enabled: true
   h_min: 1
   h_max: 3
+
+plugins:
+  - jekyll-remote-theme
