--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ description: >-
 url: 'https://widoz.github.io/wp-entities-search'
 baseurl: '/wp-entities-search'
 
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: riggraz/no-style-please
 
 toc:
   enabled: true
