--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@wordpress/env": "^5.9.0",
 		"@wordpress/scripts": "^26.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
+		"husky": "^9.0.11",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
 		"ts-jest": "^29.0.5",
