--- a/.github/workflows/assets-artifacts.yml
+++ b/.github/workflows/assets-artifacts.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Run custom action
-        uses: ../../actions/assets-artifacts
+        uses: ./github/actions/assets-artifacts
         with:
           build-command: 'yarn build'
