--- a/.github/workflows/assets-artifacts.yml
+++ b/.github/workflows/assets-artifacts.yml
@@ -3,6 +3,10 @@ name: Assets Artifacts
 on:
   workflow_dispatch:
 
+  push:
+    branches:
+      - 'feature/16/github-actions-artifacts'
+
   create:
     types: [tag]
 
