--- a/.github/actions/assets-artifacts/package.json
+++ b/.github/actions/assets-artifacts/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "simple-git": "^3.22.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
