--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"lint:js": "wp-scripts lint-js ./sources/client",
 		"lint:js:fix": "wp-scripts lint-js --fix ./sources/client",
 		"test": "jest",
-		"test:update-snapshots": "yarn test -u"
+		"test:update-snapshots": "yarn test -u",
+		"prepare": "husky"
 	}
 }
