--- a/.github/workflows/assets-artifacts.yml
+++ b/.github/workflows/assets-artifacts.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Assets
         uses: ./.github/actions/assets-artifacts
         env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+          GIT_TOKEN: ${{ secrets.GIT_TOKEN }}
           GIT_USER: ${{ secrets.GIT_USER }}
           GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
           HUSKY: 0
