--- a/.github/workflows/assets-artifacts.yml
+++ b/.github/workflows/assets-artifacts.yml
@@ -27,3 +27,4 @@ jobs:
         env:
           GIT_USER: ${{ secrets.GIT_USER }}
           GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
+          HUSKY: 0
