--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "widoz/wp-entities-search",
 	"description": "A WordPress package to search Entities including Rest API Endpoints and React Components",
 	"type": "library",
-	"license": "GPL-v2-or-later",
+	"license": "GPL-2.0-or-later",
 	"autoload": {
 		"psr-4": {
 			"Widoz\\Wp\\EntitiesSearch\\": "sources/server/src/"
