--- a/.github/workflows/php-qa.yml
+++ b/.github/workflows/php-qa.yml
@@ -28,7 +28,7 @@ jobs:
         run: find ./src/ ./tests/ -type f -name '*.php' -print0 | xargs -0 -L 1 -P 4 -- php -l
 
       - name: Install dependencies
-        uses: "ramsey/composer-install@v1"
+        uses: ramsey/composer-install@v3
 
       - name: Check code styles
         run: composer cs
