--- a/.github/workflows/php-qa.yml
+++ b/.github/workflows/php-qa.yml
@@ -32,3 +32,6 @@ jobs:
 
       - name: Check code styles
         run: composer cs
+
+      - name: Check Static Analysis
+        run: composer psalm
