--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.5.1",
 		"@total-typescript/shoehorn": "^0.1.0",
+		"@types/node": "^20.0.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
 		"@wordpress/env": "^5.9.0",
 		"@wordpress/scripts": "^26.0.0",
+		"eslint": "^8.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
+		"eslint-plugin-import": "^2.0.0",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
+		"react-dom": "^18.0.0",
 		"ts-jest": "^29.0.5",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
 		"typescript": "~5.1.0",
+		"webpack": "^5.0.0",
+		"webpack-cli": "^5.1.4",
 		"yarn": "^1.22.19"
 	},
 	"dependencies": {
@@ -37,7 +43,7 @@
 		"@wordpress/i18n": "~4.24.0",
 		"classnames": "^2.3.2",
 		"lodash": "^4.17.21",
-		"react": "~18.2.0"
+		"react": "^18.0.0"
 	},
 	"scripts": {
 		"wp-env": "wp-env",
