--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/node": "^20.0.0",
 		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
 		"@wordpress/env": "^5.9.0",
+		"@wordpress/eslint-plugin": "^19.0.0",
 		"@wordpress/scripts": "^26.0.0",
 		"eslint": "^8.0.0",
 		"eslint-import-resolver-typescript": "^3.5.5",
