--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 	"devDependencies": {
 		"@faker-js/faker": "^8",
 		"@jest/globals": "^29.4.3",
-		"@testing-library/dom": "^9.3.1",
+		"@testing-library/dom": "^10.0.0",
 		"@testing-library/jest-dom": "^6.2.0",
-		"@testing-library/react": "^14.0.0",
+		"@testing-library/react": "^16.0.0",
 		"@testing-library/user-event": "^14.5.1",
 		"@total-typescript/shoehorn": "^0.1.0",
 		"@types/node": "^20.0.0",
@@ -25,7 +25,7 @@
 		"eslint-plugin-import": "^2.0.0",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.5.0",
-		"react-dom": "^18.0.0",
+		"react-dom": "~18.2.0",
 		"ts-jest": "^29.0.5",
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.9.1",
@@ -44,7 +44,7 @@
 		"@wordpress/i18n": "~4.24.0",
 		"classnames": "^2.3.2",
 		"lodash": "^4.17.21",
-		"react": "^18.0.0"
+		"react": "~18.2.0"
 	},
 	"scripts": {
 		"wp-env": "wp-env",
