--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,20 +1,20 @@
 title: Wp Entities Search
 description: >-
   A WordPress package to search Entities including Rest API Endpoints and React Components
-url: "https://widoz.github.io/wp-entities-search"
+url: "https://spaghetti-dojo.github.io/wp-entities-search"
 baseurl: "/wp-entities-search"
 
 remote_theme: just-the-docs/just-the-docs
 
 aux_links:
   "Wp Entities Search on Github":
-    - "https://github.com/widoz/wp-entities-search"
+    - "https://github.com/spaghetti-dojo/wp-entities-search"
 
 aux_links_new_tab: true
 
 nav_external_links:
   - title: Go to the Repository
-    url: https://github.com/widoz/wp-entities-search
+    url: https://github.com/spaghetti-dojo/wp-entities-search
     opens_in_new_tab: true
 
 back_to_top: true
