--- a/.github/workflows/builld-artifacts.yml
+++ b/.github/workflows/builld-artifacts.yml
@@ -11,19 +11,19 @@ jobs:
     if: ${{ !contains(github.event.head_commit.message, '--skip-assets-artifacts') }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          cache: 'yarn'
+          cache: 'pnpm'
           node-version: '20'
-
-      - name: Install Dependencies
-        run: yarn install
+      - run: pnpm install
 
       - name: Build Artifacts
         uses: widoz/github-artifacts-action@v1
+        with:
+          command: 'pnpm build'
         env:
           GIT_USER: ${{ secrets.GIT_USER }}
           GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
