--- a/.github/workflows/builld-artifacts.yml
+++ b/.github/workflows/builld-artifacts.yml
@@ -13,12 +13,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Pnpm Install
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           cache: 'pnpm'
-          node-version: '20'
-      - run: pnpm install
+          node-version: '22'
+
+      - name: Install Dependencies
+        run: pnpm i --frozen-lockfile
 
       - name: Build Artifacts
         uses: widoz/github-artifacts-action@v1
