--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -22,12 +22,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Pnpm Install
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           cache: 'pnpm'
-          node-version: '20'
-      - run: pnpm install
+          node-version: '22'
+
+      - name: Install Dependencies
+        run: pnpm i --frozen-lockfile
 
       - name: Linting JavaScript
         run: pnpm run lint:js
