--- a/.github/workflows/builld-artifacts.yml
+++ b/.github/workflows/builld-artifacts.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Pnpm Install
         uses: pnpm/action-setup@v4
         with:
+          version: '^4'
           run_install: false
 
       - name: Setup Node
