--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Pnpm Install
         uses: pnpm/action-setup@v4
         with:
+          version: '^4'
           run_install: false
 
       - name: Setup Node
