--- a/.github/workflows/builld-artifacts.yml
+++ b/.github/workflows/builld-artifacts.yml
@@ -11,19 +11,27 @@ jobs:
     if: ${{ !contains(github.event.head_commit.message, '--skip-assets-artifacts') }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Pnpm Install
+        uses: pnpm/action-setup@v4
+        with:
+          version: '^9'
+          run_install: false
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          cache: 'yarn'
-          node-version: '20'
+          cache: 'pnpm'
+          node-version: '22'
 
       - name: Install Dependencies
-        run: yarn install
+        run: pnpm i --frozen-lockfile
 
       - name: Build Artifacts
         uses: widoz/github-artifacts-action@v1
+        with:
+          command: 'pnpm build'
         env:
           GIT_USER: ${{ secrets.GIT_USER }}
           GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
