--- a/.github/workflows/js-qa.yml
+++ b/.github/workflows/js-qa.yml
@@ -22,17 +22,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Pnpm Install
+        uses: pnpm/action-setup@v4
+        with:
+          version: '^9'
+          run_install: false
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          cache: 'yarn'
+          cache: 'pnpm'
           node-version: '22'
 
-      - name: Install
-        run: yarn install
+      - name: Install Dependencies
+        run: pnpm i --frozen-lockfile
 
       - name: Linting JavaScript
-        run: yarn lint:js
+        run: pnpm run lint:js
 
       - name: Unit Tests
-        run: yarn test
+        run: pnpm run test
