--- a/package.json
+++ b/package.json
@@ -1,59 +1,67 @@
 {
-  "name": "kensaku",
-  "description": "A WordPress package to search Entities including Rest API Endpoints and React Components",
-  "author": "guido scialfa <dev@guidoscialfa.com>",
-  "main": "./build/index.js",
-  "license": "GPL-2.0-or-later",
-  "engines": {
-    "node": "22"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^8",
-    "@jest/globals": "^29.4.3",
-    "@testing-library/dom": "^10.0.0",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@total-typescript/shoehorn": "^0.1.0",
-    "@types/node": "^22.0.0",
-    "@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
-    "@wordpress/env": "^5.9.0",
-    "@wordpress/eslint-plugin": "^19.0.0",
-    "@wordpress/scripts": "^26.0.0",
-    "eslint": "^8.0.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.0.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.5.0",
-    "react-dom": "~18.2.0",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.1.0",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "yarn": "^1.22.19"
-  },
-  "dependencies": {
-    "@types/lodash": "^4",
-    "@wordpress/api-fetch": "~6.21.0",
-    "@wordpress/components": "~23.1.0",
-    "@wordpress/compose": "^6.23.0",
-    "@wordpress/core-data": "~6.12.0",
-    "@wordpress/hooks": "^3.49.0",
-    "@wordpress/i18n": "~4.24.0",
-    "classnames": "^2.3.2",
-    "lodash": "^4.17.21",
-    "react": "~18.2.0"
-  },
-  "scripts": {
-    "wp-env": "wp-env",
-    "build": "wp-scripts build --webpack-src-dir=./sources/client/src",
-    "build:dev": "wp-scripts start --webpack--devtool=inline-source-map --webpack-src-dir=./sources/client/src",
-    "cs:fix": "wp-scripts format ./sources/client",
-    "lint:js": "wp-scripts lint-js ./sources/client",
-    "lint:js:fix": "wp-scripts lint-js --fix ./sources/client",
-    "test": "jest",
-    "test:update-snapshots": "yarn test -u"
-  }
+	"name": "kensaku",
+	"description": "A WordPress package to search Entities including Rest API Endpoints and React Components",
+	"author": "guido scialfa <dev@guidoscialfa.com>",
+	"main": "./build/index.js",
+	"license": "GPL-2.0-or-later",
+	"engines": {
+		"node": "22"
+	},
+	"devDependencies": {
+		"@types/lodash": "^4",
+		"@types/node": "^22.0.0",
+		"@types/react": "~18.2.0",
+		"@types/react-dom": "~18.2.0",
+		"@faker-js/faker": "^8",
+		"@jest/globals": "^29.4.3",
+		"@testing-library/dom": "^10.0.0",
+		"@testing-library/jest-dom": "^6.2.0",
+		"@testing-library/react": "^16.0.0",
+		"@testing-library/user-event": "^14.5.1",
+		"@total-typescript/shoehorn": "^0.1.0",
+		"@wordpress/dependency-extraction-webpack-plugin": "^4.8.0",
+		"@wordpress/env": "^5.9.0",
+		"@wordpress/eslint-plugin": "^19.0.0",
+		"@wordpress/scripts": "^26.0.0",
+		"eslint": "^8.0.0",
+		"eslint-import-resolver-typescript": "^3.5.5",
+		"eslint-plugin-import": "^2.0.0",
+		"jest": "^29.4.3",
+		"jest-environment-jsdom": "^29.5.0",
+		"react-dom": "~18.2.0",
+		"ts-jest": "^29.0.5",
+		"ts-loader": "^9.4.2",
+		"ts-node": "^10.9.1",
+		"typescript": "~5.1.0",
+		"webpack": "^5.0.0",
+		"webpack-cli": "^5.1.4"
+	},
+	"dependencies": {
+		"@wordpress/api-fetch": "~6.21.0",
+		"@wordpress/components": "~23.1.0",
+		"@wordpress/compose": "^6.23.0",
+		"@wordpress/core-data": "~6.12.0",
+		"@wordpress/hooks": "^3.49.0",
+		"@wordpress/i18n": "~4.24.0",
+		"classnames": "^2.3.2",
+		"lodash": "^4.17.21",
+		"react": "~18.2.0"
+	},
+	"pnpm": {
+		"overrides": {
+			"react": "18.2.0",
+			"react-dom": "18.2.0"
+		}
+	},
+	"scripts": {
+		"wp-env": "wp-env",
+		"build": "wp-scripts build --webpack-src-dir=./sources/client/src",
+		"build:dev": "wp-scripts start --webpack-devtool=inline-source-map --webpack-src-dir=./sources/client/src",
+		"cs:fix": "wp-scripts format ./sources/client",
+		"lint:js": "wp-scripts lint-js ./sources/client",
+		"lint:js:fix": "wp-scripts lint-js --fix ./sources/client",
+		"test": "jest",
+		"test:update-snapshots": "pnpm test -u",
+		"qa": "tsc --noEmit && pnpm lint:js && pnpm test"
+	}
 }
