Split workflows into client and server linting
Reorganize the GitHub workflows by introducing dedicated workflows for
client (`client-linting.yml`) and server (`server-linting.yml`). Removed
legacy `php-qa`, `js-qa`, and `build-artifacts` workflows in favor of
more streamlined setups.

--- a/.github/workflows/client-linting.yml
+++ b/.github/workflows/client-linting.yml
@@ -1,13 +1,16 @@
-name: JS Quality Assurance
+name: Client Linting
 
 on:
+  workflow_dispatch: { }
+
   pull_request:
+
   push:
     branches:
       - main
 
     paths:
-      - '**/workflows/*js*'
+      - '**/workflows/client-linting.yml'
       - '**.js'
       - '**.jsx'
       - '**.ts'
