--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -1,4 +1,4 @@
-name: Build Artifacts
+name: Artifacts
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - '*'
 
 jobs:
-  build:
+  artifacts:
     runs-on: ubuntu-latest
     if: ${{ !contains(github.event.head_commit.message, '--skip-assets-artifacts') }}
     steps:
