Rename job in client-linting workflow
Renamed the job from `build` to `client-linting` for better clarity.

--- a/.github/workflows/client-linting.yml
+++ b/.github/workflows/client-linting.yml
@@ -18,7 +18,7 @@ on:
       - '**.json'
 
 jobs:
-  build:
+  client-linting:
     runs-on: ubuntu-latest
     if: "!github.event.pull_request.draft"
     steps:
